use groupby method to get average age for both genders and counts for unique value occurence

--- a/DATA  ANALYSIS WITH PANDAS.ipynb
+++ b/DATA  ANALYSIS WITH PANDAS.ipynb
@@ -1136,7 +1136,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2853045c",
+   "id": "18836126",
    "metadata": {},
    "source": [
     "The cell above removes/drops the column with the label \"fblwgt\" by specifying the axis=1 for columns and axis=0 for rows.\n",
@@ -1146,7 +1146,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "8b040b2c",
+   "id": "dfb70de0",
    "metadata": {},
    "outputs": [
     {
@@ -1166,7 +1166,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f0a805a9",
+   "id": "c3f97417",
    "metadata": {},
    "source": [
     "Change in the number of columns from 15 to 14 with no changes in rows."
@@ -1175,7 +1175,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "c192f40e",
+   "id": "5a418444",
    "metadata": {
     "scrolled": true
    },
@@ -1461,7 +1461,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b07a0e93",
+   "id": "4f6c1dfb",
    "metadata": {},
    "source": [
     "the cell above displays the statistical summary of both the numeric and non-numeric columns and it also provides information on the unique values and their frequencies for categorical columns.\n",
@@ -1480,7 +1480,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "055387a7",
+   "id": "fce16ee5",
    "metadata": {},
    "outputs": [
     {
@@ -1517,7 +1517,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bfaf83aa",
+   "id": "2ead0344",
    "metadata": {},
    "source": [
     "value_counts() produces a frequency table, which shows occurance of each feature or attribute in a dataset."
@@ -1526,7 +1526,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "351d620d",
+   "id": "97dd3af4",
    "metadata": {},
    "outputs": [
     {
@@ -1547,7 +1547,7 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "id": "7e4338df",
+   "id": "babc800b",
    "metadata": {},
    "source": [
     "the code calculates the number of unique values in the 'education' column.\n",
@@ -1557,7 +1557,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "bf3fd565",
+   "id": "d94e36a7",
    "metadata": {},
    "outputs": [
     {
@@ -1589,7 +1589,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f0e51f4e",
+   "id": "d75e9dcf",
    "metadata": {},
    "source": [
     "The code returns the frequency table for age that appears to be too lengthy to be analysed and the frequency of each value is displayed.For this we can use graphs to make more observations."
@@ -1598,7 +1598,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "bbbefe61",
+   "id": "6a53c7dc",
    "metadata": {
     "scrolled": true
    },
@@ -1630,7 +1630,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "014ff5f4",
+   "id": "c5446f83",
    "metadata": {},
    "source": [
     "This will display the age distribution of the dataset.The middle 50% of ages will be represented by the big box, median ages will be represented by the middle line inside the box and the range of ages that are not outliers will be represented by the whiskers.In this case the median age is at the interval of 38-39 years and the outlier variable is between 80-90 years"
@@ -1639,7 +1639,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "f37d7533",
+   "id": "5fd06e7a",
    "metadata": {},
    "outputs": [
     {
@@ -1670,7 +1670,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "d212bff3",
+   "id": "59d2a5ec",
    "metadata": {},
    "outputs": [
     {
@@ -1700,7 +1700,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8c9e35cc",
+   "id": "ba8df401",
    "metadata": {},
    "source": [
     "Both the commands generate a histogram of the age variable to show the age distribution by dividing into 100 equal intervals by using bins=100.The graph shows to be trailing on one side meaning that the variable is skewed.The ages with the highest frequency is on the interval of 30-38 years, this show the central tendency.Outliers for this case are ages between 80-90 years"
@@ -1709,7 +1709,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "ceb8e58f",
+   "id": "657c5fc9",
    "metadata": {},
    "outputs": [
     {
@@ -1732,7 +1732,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c99ab5f8",
+   "id": "cce6a38f",
    "metadata": {},
    "source": [
     "There are only two unique values in \"sex\" column.In this case there are 20079 males and 9921 females in the dataset."
@@ -1741,7 +1741,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "c34ce747",
+   "id": "656d11d0",
    "metadata": {},
    "outputs": [
     {
@@ -1764,7 +1764,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b242fdee",
+   "id": "4a717852",
    "metadata": {},
    "source": [
     "returns a list of all column names present in the dataset"
@@ -1773,7 +1773,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "3f62d1fd",
+   "id": "a1ee581a",
    "metadata": {},
    "outputs": [
     {
@@ -1803,16 +1803,147 @@
   },
   {
    "cell_type": "markdown",
-   "id": "344d4b56",
+   "id": "15479b57",
    "metadata": {},
    "source": [
     "The command returns a series of the types of working class and the occurence of each count in that proffession.The display above has been grouped in descending order. In this case 'private' has higher number than those who never worked."
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "707a6646",
+   "metadata": {},
+   "source": [
+    "### Q2 \n",
+    "1. How many males and females exist in the dataset?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "bbdbea5c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "sex\n",
+       " Male      20079\n",
+       " Female     9921\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data['sex'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "b25f4fb3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "sex\n",
+       " Female     9921\n",
+       " Male      20079\n",
+       "Name: sex, dtype: int64"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data['sex'].groupby([data['sex']]).count()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9549da35",
+   "metadata": {},
+   "source": [
+    "Both methods can be used to get the occurence of each value.In this case the methods output that tahere are 20079 females and 9921 males."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "ea64021a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total number of both genders is: 30000\n"
+     ]
+    }
+   ],
+   "source": [
+    "new_gender= data['sex'].count()\n",
+    "print(f'Total number of both genders is: {new_gender}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d8ba44a8",
+   "metadata": {},
+   "source": [
+    "This method return the total number of both female and male in the dataset."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "515f3868",
+   "metadata": {},
+   "source": [
+    "2. what is the average age of each gender in the given population?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "5c5b71e6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sex\n",
+      " Female    36.908477\n",
+      " Male      39.438368\n",
+      "Name: age, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "average_age = data['age'].groupby([data['sex']]).mean()\n",
+    "print(average_age)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "94bc0df0",
+   "metadata": {},
+   "source": [
+    "The command groups the 'age' column of the dataset by the 'sex' column and then calculates the mean age for each group.\n",
+    "Average age for female is 36.90 while that of male is 39.43\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eae4382a",
+   "id": "c60f19de",
    "metadata": {},
    "outputs": [],
    "source": []
