get average age of male and female across different education categories using groupby and mean

--- a/DATA  ANALYSIS WITH PANDAS.ipynb
+++ b/DATA  ANALYSIS WITH PANDAS.ipynb
@@ -1136,7 +1136,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "18836126",
+   "id": "59fb7f49",
    "metadata": {},
    "source": [
     "The cell above removes/drops the column with the label \"fblwgt\" by specifying the axis=1 for columns and axis=0 for rows.\n",
@@ -1146,7 +1146,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "dfb70de0",
+   "id": "786b6041",
    "metadata": {},
    "outputs": [
     {
@@ -1166,7 +1166,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c3f97417",
+   "id": "b418cc9e",
    "metadata": {},
    "source": [
     "Change in the number of columns from 15 to 14 with no changes in rows."
@@ -1175,7 +1175,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "5a418444",
+   "id": "d5cd35c1",
    "metadata": {
     "scrolled": true
    },
@@ -1461,7 +1461,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4f6c1dfb",
+   "id": "26016943",
    "metadata": {},
    "source": [
     "the cell above displays the statistical summary of both the numeric and non-numeric columns and it also provides information on the unique values and their frequencies for categorical columns.\n",
@@ -1480,7 +1480,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "fce16ee5",
+   "id": "c4c94ef2",
    "metadata": {},
    "outputs": [
     {
@@ -1517,7 +1517,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2ead0344",
+   "id": "39ef051b",
    "metadata": {},
    "source": [
     "value_counts() produces a frequency table, which shows occurance of each feature or attribute in a dataset."
@@ -1526,7 +1526,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "97dd3af4",
+   "id": "7bb013ee",
    "metadata": {},
    "outputs": [
     {
@@ -1547,7 +1547,7 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "id": "babc800b",
+   "id": "9e46f41e",
    "metadata": {},
    "source": [
     "the code calculates the number of unique values in the 'education' column.\n",
@@ -1557,7 +1557,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "d94e36a7",
+   "id": "03e8a67b",
    "metadata": {},
    "outputs": [
     {
@@ -1589,7 +1589,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d75e9dcf",
+   "id": "2cd27169",
    "metadata": {},
    "source": [
     "The code returns the frequency table for age that appears to be too lengthy to be analysed and the frequency of each value is displayed.For this we can use graphs to make more observations."
@@ -1598,7 +1598,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "6a53c7dc",
+   "id": "12bd7ddc",
    "metadata": {
     "scrolled": true
    },
@@ -1630,7 +1630,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c5446f83",
+   "id": "8765d08d",
    "metadata": {},
    "source": [
     "This will display the age distribution of the dataset.The middle 50% of ages will be represented by the big box, median ages will be represented by the middle line inside the box and the range of ages that are not outliers will be represented by the whiskers.In this case the median age is at the interval of 38-39 years and the outlier variable is between 80-90 years"
@@ -1639,7 +1639,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "5fd06e7a",
+   "id": "ca50b600",
    "metadata": {},
    "outputs": [
     {
@@ -1670,7 +1670,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "59d2a5ec",
+   "id": "c9196845",
    "metadata": {},
    "outputs": [
     {
@@ -1700,7 +1700,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ba8df401",
+   "id": "35338759",
    "metadata": {},
    "source": [
     "Both the commands generate a histogram of the age variable to show the age distribution by dividing into 100 equal intervals by using bins=100.The graph shows to be trailing on one side meaning that the variable is skewed.The ages with the highest frequency is on the interval of 30-38 years, this show the central tendency.Outliers for this case are ages between 80-90 years"
@@ -1709,7 +1709,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "657c5fc9",
+   "id": "45461609",
    "metadata": {},
    "outputs": [
     {
@@ -1732,7 +1732,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cce6a38f",
+   "id": "00674c2c",
    "metadata": {},
    "source": [
     "There are only two unique values in \"sex\" column.In this case there are 20079 males and 9921 females in the dataset."
@@ -1741,7 +1741,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "656d11d0",
+   "id": "03007be3",
    "metadata": {},
    "outputs": [
     {
@@ -1764,7 +1764,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4a717852",
+   "id": "d04aae06",
    "metadata": {},
    "source": [
     "returns a list of all column names present in the dataset"
@@ -1773,7 +1773,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "a1ee581a",
+   "id": "bd128dc6",
    "metadata": {},
    "outputs": [
     {
@@ -1803,7 +1803,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "15479b57",
+   "id": "2b5a5300",
    "metadata": {},
    "source": [
     "The command returns a series of the types of working class and the occurence of each count in that proffession.The display above has been grouped in descending order. In this case 'private' has higher number than those who never worked."
@@ -1811,7 +1811,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "707a6646",
+   "id": "0d572b07",
    "metadata": {},
    "source": [
     "### Q2 \n",
@@ -1821,7 +1821,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "bbdbea5c",
+   "id": "3a4c8cbe",
    "metadata": {},
    "outputs": [
     {
@@ -1845,7 +1845,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "b25f4fb3",
+   "id": "e987562c",
    "metadata": {},
    "outputs": [
     {
@@ -1868,7 +1868,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9549da35",
+   "id": "78751d7b",
    "metadata": {},
    "source": [
     "Both methods can be used to get the occurence of each value.In this case the methods output that tahere are 20079 females and 9921 males."
@@ -1877,7 +1877,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "ea64021a",
+   "id": "f851a360",
    "metadata": {},
    "outputs": [
     {
@@ -1895,7 +1895,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d8ba44a8",
+   "id": "a55217aa",
    "metadata": {},
    "source": [
     "This method return the total number of both female and male in the dataset."
@@ -1903,7 +1903,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "515f3868",
+   "id": "c328110c",
    "metadata": {},
    "source": [
     "2. what is the average age of each gender in the given population?"
@@ -1912,7 +1912,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "5c5b71e6",
+   "id": "3210cf02",
    "metadata": {},
    "outputs": [
     {
@@ -1933,7 +1933,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "94bc0df0",
+   "id": "fc915529",
    "metadata": {},
    "source": [
     "The command groups the 'age' column of the dataset by the 'sex' column and then calculates the mean age for each group.\n",
@@ -1941,9 +1941,79 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "77eef819",
+   "metadata": {},
+   "source": [
+    "2. What is the average age of male and female across different education categories?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "4edd596d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "education      sex    \n",
+       " 10th           Female    34.946429\n",
+       "                Male      38.512733\n",
+       " 11th           Female    30.591584\n",
+       "                Male      33.621543\n",
+       " 12th           Female    29.894737\n",
+       "                Male      33.421642\n",
+       " 1st-4th        Female    49.125000\n",
+       "                Male      45.666667\n",
+       " 5th-6th        Female    43.881579\n",
+       "                Male      42.351111\n",
+       " 7th-8th        Female    50.609589\n",
+       "                Male      47.733634\n",
+       " 9th            Female    41.731343\n",
+       "                Male      40.652819\n",
+       " Assoc-acdm     Female    36.444444\n",
+       "                Male      37.856187\n",
+       " Assoc-voc      Female    37.810870\n",
+       "                Male      39.000000\n",
+       " Bachelors      Female    35.722410\n",
+       "                Male      40.412536\n",
+       " Doctorate      Female    45.573171\n",
+       "                Male      48.183946\n",
+       " HS-grad        Female    38.780519\n",
+       "                Male      39.165930\n",
+       " Masters        Female    43.202840\n",
+       "                Male      44.288166\n",
+       " Preschool      Female    42.071429\n",
+       "                Male      43.228571\n",
+       " Prof-school    Female    40.204819\n",
+       "                Male      45.343115\n",
+       " Some-college   Female    33.775762\n",
+       "                Male      36.946286\n",
+       "Name: age, dtype: float64"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data['age'].groupby([data['education'],data['sex']]).mean()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6033c321",
+   "metadata": {},
+   "source": [
+    "The dataset data is grouped by the education and sex columns, and the mean age for each group is calculated.This results in a multi-level index, with education as the first level and sex as the second level.The output reveals the average age of each gender in different education categories."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c60f19de",
+   "id": "c2f69283",
    "metadata": {},
    "outputs": [],
    "source": []
