get the average contribution to capital-gain of each sex and occupation category using groupby and mean

--- a/DATA  ANALYSIS WITH PANDAS.ipynb
+++ b/DATA  ANALYSIS WITH PANDAS.ipynb
@@ -1136,7 +1136,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "59fb7f49",
+   "id": "71dc4a4c",
    "metadata": {},
    "source": [
     "The cell above removes/drops the column with the label \"fblwgt\" by specifying the axis=1 for columns and axis=0 for rows.\n",
@@ -1146,7 +1146,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "786b6041",
+   "id": "f2f3f456",
    "metadata": {},
    "outputs": [
     {
@@ -1166,7 +1166,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b418cc9e",
+   "id": "ce32e6ca",
    "metadata": {},
    "source": [
     "Change in the number of columns from 15 to 14 with no changes in rows."
@@ -1175,7 +1175,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "d5cd35c1",
+   "id": "980e7e63",
    "metadata": {
     "scrolled": true
    },
@@ -1461,7 +1461,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "26016943",
+   "id": "0a03f68a",
    "metadata": {},
    "source": [
     "the cell above displays the statistical summary of both the numeric and non-numeric columns and it also provides information on the unique values and their frequencies for categorical columns.\n",
@@ -1480,7 +1480,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "c4c94ef2",
+   "id": "bf68ebf5",
    "metadata": {},
    "outputs": [
     {
@@ -1517,7 +1517,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "39ef051b",
+   "id": "d6870f2b",
    "metadata": {},
    "source": [
     "value_counts() produces a frequency table, which shows occurance of each feature or attribute in a dataset."
@@ -1526,7 +1526,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "7bb013ee",
+   "id": "67913814",
    "metadata": {},
    "outputs": [
     {
@@ -1547,7 +1547,7 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "id": "9e46f41e",
+   "id": "0656493c",
    "metadata": {},
    "source": [
     "the code calculates the number of unique values in the 'education' column.\n",
@@ -1557,7 +1557,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "03e8a67b",
+   "id": "8f2cd829",
    "metadata": {},
    "outputs": [
     {
@@ -1589,7 +1589,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2cd27169",
+   "id": "4fb7a68a",
    "metadata": {},
    "source": [
     "The code returns the frequency table for age that appears to be too lengthy to be analysed and the frequency of each value is displayed.For this we can use graphs to make more observations."
@@ -1598,7 +1598,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "12bd7ddc",
+   "id": "189deaec",
    "metadata": {
     "scrolled": true
    },
@@ -1630,7 +1630,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8765d08d",
+   "id": "d5e35375",
    "metadata": {},
    "source": [
     "This will display the age distribution of the dataset.The middle 50% of ages will be represented by the big box, median ages will be represented by the middle line inside the box and the range of ages that are not outliers will be represented by the whiskers.In this case the median age is at the interval of 38-39 years and the outlier variable is between 80-90 years"
@@ -1639,7 +1639,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "ca50b600",
+   "id": "6d824734",
    "metadata": {},
    "outputs": [
     {
@@ -1670,7 +1670,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "c9196845",
+   "id": "51f6db87",
    "metadata": {},
    "outputs": [
     {
@@ -1700,7 +1700,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "35338759",
+   "id": "89510c99",
    "metadata": {},
    "source": [
     "Both the commands generate a histogram of the age variable to show the age distribution by dividing into 100 equal intervals by using bins=100.The graph shows to be trailing on one side meaning that the variable is skewed.The ages with the highest frequency is on the interval of 30-38 years, this show the central tendency.Outliers for this case are ages between 80-90 years"
@@ -1709,7 +1709,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "45461609",
+   "id": "49240a1b",
    "metadata": {},
    "outputs": [
     {
@@ -1732,7 +1732,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "00674c2c",
+   "id": "c54a6267",
    "metadata": {},
    "source": [
     "There are only two unique values in \"sex\" column.In this case there are 20079 males and 9921 females in the dataset."
@@ -1741,7 +1741,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "03007be3",
+   "id": "eabee1a0",
    "metadata": {},
    "outputs": [
     {
@@ -1764,7 +1764,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d04aae06",
+   "id": "4fd986da",
    "metadata": {},
    "source": [
     "returns a list of all column names present in the dataset"
@@ -1773,7 +1773,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "bd128dc6",
+   "id": "498cab73",
    "metadata": {},
    "outputs": [
     {
@@ -1803,7 +1803,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2b5a5300",
+   "id": "d446d907",
    "metadata": {},
    "source": [
     "The command returns a series of the types of working class and the occurence of each count in that proffession.The display above has been grouped in descending order. In this case 'private' has higher number than those who never worked."
@@ -1811,7 +1811,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0d572b07",
+   "id": "0d998bbb",
    "metadata": {},
    "source": [
     "### Q2 \n",
@@ -1821,7 +1821,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "3a4c8cbe",
+   "id": "2bc7817b",
    "metadata": {},
    "outputs": [
     {
@@ -1845,7 +1845,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "e987562c",
+   "id": "c2705a1a",
    "metadata": {},
    "outputs": [
     {
@@ -1868,7 +1868,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "78751d7b",
+   "id": "2022263b",
    "metadata": {},
    "source": [
     "Both methods can be used to get the occurence of each value.In this case the methods output that tahere are 20079 females and 9921 males."
@@ -1877,7 +1877,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "f851a360",
+   "id": "85ffbef0",
    "metadata": {},
    "outputs": [
     {
@@ -1895,7 +1895,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a55217aa",
+   "id": "34b521b0",
    "metadata": {},
    "source": [
     "This method return the total number of both female and male in the dataset."
@@ -1903,7 +1903,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c328110c",
+   "id": "b42ea959",
    "metadata": {},
    "source": [
     "2. what is the average age of each gender in the given population?"
@@ -1912,7 +1912,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "3210cf02",
+   "id": "99ab55ee",
    "metadata": {},
    "outputs": [
     {
@@ -1933,7 +1933,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fc915529",
+   "id": "05170955",
    "metadata": {},
    "source": [
     "The command groups the 'age' column of the dataset by the 'sex' column and then calculates the mean age for each group.\n",
@@ -1942,7 +1942,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "77eef819",
+   "id": "32d63f75",
    "metadata": {},
    "source": [
     "2. What is the average age of male and female across different education categories?"
@@ -1951,7 +1951,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "4edd596d",
+   "id": "bf0069a1",
    "metadata": {},
    "outputs": [
     {
@@ -2004,19 +2004,130 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6033c321",
+   "id": "ffae375b",
    "metadata": {},
    "source": [
     "The dataset data is grouped by the education and sex columns, and the mean age for each group is calculated.This results in a multi-level index, with education as the first level and sex as the second level.The output reveals the average age of each gender in different education categories."
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c2f69283",
+   "cell_type": "markdown",
+   "id": "49722cb8",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Q3\n",
+    "1. What is the average contribution to capital-gain of each sex and occupation category?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "d9ed11de",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "sex      occupation        \n",
+       " Female   ?                     266.987080\n",
+       "          Adm-clerical          442.869919\n",
+       "          Craft-repair          784.014634\n",
+       "          Exec-managerial       959.121127\n",
+       "          Farming-fishing      1179.596491\n",
+       "          Handlers-cleaners     147.410596\n",
+       "          Machine-op-inspct     164.621359\n",
+       "          Other-service         169.537150\n",
+       "          Priv-house-serv       321.125000\n",
+       "          Prof-specialty       1338.455777\n",
+       "          Protective-serv      1889.611940\n",
+       "          Sales                 259.135158\n",
+       "          Tech-support          645.310769\n",
+       "          Transport-moving      489.357143\n",
+       " Male     ?                     817.877970\n",
+       "          Adm-clerical          441.794690\n",
+       "          Armed-Forces            0.000000\n",
+       "          Craft-repair          611.080011\n",
+       "          Exec-managerial      2762.535661\n",
+       "          Farming-fishing       563.513514\n",
+       "          Handlers-cleaners     268.485740\n",
+       "          Machine-op-inspct     384.260805\n",
+       "          Other-service         242.767356\n",
+       "          Priv-house-serv        84.857143\n",
+       "          Prof-specialty       3603.522204\n",
+       "          Protective-serv       583.354717\n",
+       "          Sales                1850.046182\n",
+       "          Tech-support          700.047170\n",
+       "          Transport-moving      498.105899\n",
+       "Name: capital gain, dtype: float64"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data['capital gain'].groupby([data['sex'],data['occupation']]).mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "9fa9cc7a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "sex      occupation        \n",
+       " Female   ?                     266.987080\n",
+       "          Adm-clerical          442.869919\n",
+       "          Craft-repair          784.014634\n",
+       "          Exec-managerial       959.121127\n",
+       "          Farming-fishing      1179.596491\n",
+       "          Handlers-cleaners     147.410596\n",
+       "          Machine-op-inspct     164.621359\n",
+       "          Other-service         169.537150\n",
+       "          Priv-house-serv       321.125000\n",
+       "          Prof-specialty       1338.455777\n",
+       "          Protective-serv      1889.611940\n",
+       "          Sales                 259.135158\n",
+       "          Tech-support          645.310769\n",
+       "          Transport-moving      489.357143\n",
+       " Male     ?                     817.877970\n",
+       "          Adm-clerical          441.794690\n",
+       "          Armed-Forces            0.000000\n",
+       "          Craft-repair          611.080011\n",
+       "          Exec-managerial      2762.535661\n",
+       "          Farming-fishing       563.513514\n",
+       "          Handlers-cleaners     268.485740\n",
+       "          Machine-op-inspct     384.260805\n",
+       "          Other-service         242.767356\n",
+       "          Priv-house-serv        84.857143\n",
+       "          Prof-specialty       3603.522204\n",
+       "          Protective-serv       583.354717\n",
+       "          Sales                1850.046182\n",
+       "          Tech-support          700.047170\n",
+       "          Transport-moving      498.105899\n",
+       "Name: capital gain, dtype: float64"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.groupby(['sex', 'occupation'])['capital gain'].mean()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "05c7d3a5",
+   "metadata": {},
+   "source": [
+    "Both methods group the data by both sex and occupation columns, and then calculate the mean of capital gain for each group. The output is a Series with a multi-level index of 'sex' and 'occupation', and the corresponding average capital gain for each group.\n"
+   ]
   }
  ],
  "metadata": {
