--- a/DATA  ANALYSIS WITH PANDAS.ipynb
+++ b/DATA  ANALYSIS WITH PANDAS.ipynb
@@ -1136,7 +1136,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "71dc4a4c",
+   "id": "3bc8f27b",
    "metadata": {},
    "source": [
     "The cell above removes/drops the column with the label \"fblwgt\" by specifying the axis=1 for columns and axis=0 for rows.\n",
@@ -1146,7 +1146,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "f2f3f456",
+   "id": "66ab1ad1",
    "metadata": {},
    "outputs": [
     {
@@ -1166,7 +1166,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ce32e6ca",
+   "id": "462b4602",
    "metadata": {},
    "source": [
     "Change in the number of columns from 15 to 14 with no changes in rows."
@@ -1175,7 +1175,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "980e7e63",
+   "id": "539921f3",
    "metadata": {
     "scrolled": true
    },
@@ -1461,7 +1461,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0a03f68a",
+   "id": "1d163352",
    "metadata": {},
    "source": [
     "the cell above displays the statistical summary of both the numeric and non-numeric columns and it also provides information on the unique values and their frequencies for categorical columns.\n",
@@ -1480,7 +1480,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "bf68ebf5",
+   "id": "5762b448",
    "metadata": {},
    "outputs": [
     {
@@ -1517,7 +1517,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d6870f2b",
+   "id": "7ef15aba",
    "metadata": {},
    "source": [
     "value_counts() produces a frequency table, which shows occurance of each feature or attribute in a dataset."
@@ -1526,7 +1526,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "67913814",
+   "id": "52d46d6e",
    "metadata": {},
    "outputs": [
     {
@@ -1547,7 +1547,7 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "id": "0656493c",
+   "id": "f88e16a2",
    "metadata": {},
    "source": [
     "the code calculates the number of unique values in the 'education' column.\n",
@@ -1557,7 +1557,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "8f2cd829",
+   "id": "98e9759d",
    "metadata": {},
    "outputs": [
     {
@@ -1589,7 +1589,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4fb7a68a",
+   "id": "f7997719",
    "metadata": {},
    "source": [
     "The code returns the frequency table for age that appears to be too lengthy to be analysed and the frequency of each value is displayed.For this we can use graphs to make more observations."
@@ -1598,7 +1598,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "189deaec",
+   "id": "bcc40b7a",
    "metadata": {
     "scrolled": true
    },
@@ -1630,7 +1630,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d5e35375",
+   "id": "05f13ee0",
    "metadata": {},
    "source": [
     "This will display the age distribution of the dataset.The middle 50% of ages will be represented by the big box, median ages will be represented by the middle line inside the box and the range of ages that are not outliers will be represented by the whiskers.In this case the median age is at the interval of 38-39 years and the outlier variable is between 80-90 years"
@@ -1639,7 +1639,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "6d824734",
+   "id": "74486a18",
    "metadata": {},
    "outputs": [
     {
@@ -1670,7 +1670,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "51f6db87",
+   "id": "d97abaee",
    "metadata": {},
    "outputs": [
     {
@@ -1700,7 +1700,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "89510c99",
+   "id": "fe30d7dc",
    "metadata": {},
    "source": [
     "Both the commands generate a histogram of the age variable to show the age distribution by dividing into 100 equal intervals by using bins=100.The graph shows to be trailing on one side meaning that the variable is skewed.The ages with the highest frequency is on the interval of 30-38 years, this show the central tendency.Outliers for this case are ages between 80-90 years"
@@ -1709,7 +1709,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "49240a1b",
+   "id": "774ecaaf",
    "metadata": {},
    "outputs": [
     {
@@ -1732,7 +1732,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c54a6267",
+   "id": "6750702a",
    "metadata": {},
    "source": [
     "There are only two unique values in \"sex\" column.In this case there are 20079 males and 9921 females in the dataset."
@@ -1741,7 +1741,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "eabee1a0",
+   "id": "b641c6e9",
    "metadata": {},
    "outputs": [
     {
@@ -1764,7 +1764,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4fd986da",
+   "id": "a1d602bd",
    "metadata": {},
    "source": [
     "returns a list of all column names present in the dataset"
@@ -1773,7 +1773,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "498cab73",
+   "id": "174eb578",
    "metadata": {},
    "outputs": [
     {
@@ -1803,7 +1803,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d446d907",
+   "id": "e8b0c7b6",
    "metadata": {},
    "source": [
     "The command returns a series of the types of working class and the occurence of each count in that proffession.The display above has been grouped in descending order. In this case 'private' has higher number than those who never worked."
@@ -1811,7 +1811,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0d998bbb",
+   "id": "3e93a16b",
    "metadata": {},
    "source": [
     "### Q2 \n",
@@ -1821,7 +1821,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "2bc7817b",
+   "id": "5f0bdf05",
    "metadata": {},
    "outputs": [
     {
@@ -1845,7 +1845,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "c2705a1a",
+   "id": "17413231",
    "metadata": {},
    "outputs": [
     {
@@ -1868,7 +1868,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2022263b",
+   "id": "679c04b4",
    "metadata": {},
    "source": [
     "Both methods can be used to get the occurence of each value.In this case the methods output that tahere are 20079 females and 9921 males."
@@ -1877,7 +1877,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "85ffbef0",
+   "id": "168de430",
    "metadata": {},
    "outputs": [
     {
@@ -1895,7 +1895,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "34b521b0",
+   "id": "49caab43",
    "metadata": {},
    "source": [
     "This method return the total number of both female and male in the dataset."
@@ -1903,7 +1903,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b42ea959",
+   "id": "d9e70783",
    "metadata": {},
    "source": [
     "2. what is the average age of each gender in the given population?"
@@ -1912,7 +1912,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "99ab55ee",
+   "id": "ed09901f",
    "metadata": {},
    "outputs": [
     {
@@ -1933,7 +1933,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "05170955",
+   "id": "0304ab0f",
    "metadata": {},
    "source": [
     "The command groups the 'age' column of the dataset by the 'sex' column and then calculates the mean age for each group.\n",
@@ -1942,7 +1942,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "32d63f75",
+   "id": "32e003ea",
    "metadata": {},
    "source": [
     "2. What is the average age of male and female across different education categories?"
@@ -1951,7 +1951,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "bf0069a1",
+   "id": "570ef2bd",
    "metadata": {},
    "outputs": [
     {
@@ -2004,7 +2004,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ffae375b",
+   "id": "952cde71",
    "metadata": {},
    "source": [
     "The dataset data is grouped by the education and sex columns, and the mean age for each group is calculated.This results in a multi-level index, with education as the first level and sex as the second level.The output reveals the average age of each gender in different education categories."
@@ -2012,7 +2012,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "49722cb8",
+   "id": "85c4ddf1",
    "metadata": {},
    "source": [
     "### Q3\n",
@@ -2022,7 +2022,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "d9ed11de",
+   "id": "04cfeec4",
    "metadata": {},
    "outputs": [
     {
@@ -2073,7 +2073,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "9fa9cc7a",
+   "id": "0922eaa9",
    "metadata": {},
    "outputs": [
     {
@@ -2123,11 +2123,64 @@
   },
   {
    "cell_type": "markdown",
-   "id": "05c7d3a5",
+   "id": "b3f913b8",
    "metadata": {},
    "source": [
     "Both methods group the data by both sex and occupation columns, and then calculate the mean of capital gain for each group. The output is a Series with a multi-level index of 'sex' and 'occupation', and the corresponding average capital gain for each group.\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b59de0f3",
+   "metadata": {},
+   "source": [
+    "### Q4\n",
+    "1. Identify the average capital-gain by males and females accross different marital-status."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "0734ab37",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "marital status          sex    \n",
+       " Divorced                Female     416.370024\n",
+       "                         Male      1097.049663\n",
+       " Married-AF-spouse       Female     204.076923\n",
+       "                         Male      1042.571429\n",
+       " Married-civ-spouse      Female    1686.291339\n",
+       "                         Male      1792.854026\n",
+       " Married-spouse-absent   Female     391.328042\n",
+       "                         Male      1038.562500\n",
+       " Never-married           Female     287.739845\n",
+       "                         Male       401.032193\n",
+       " Separated               Female     351.797945\n",
+       "                         Male       885.793566\n",
+       " Widowed                 Female     438.736636\n",
+       "                         Male      1010.146497\n",
+       "Name: capital gain, dtype: float64"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.groupby(['marital status', 'sex'])['capital gain'].mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3d7562ed",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
